--- a/css/redux_style.css
+++ b/css/redux_style.css
@@ -12,6 +12,39 @@ body {
 	line-height:1;
 }
 
+form input[type="text"] {
+	width:150px;
+	height:20px;
+	margin-right:5px;
+	padding-left:10px;
+	background:#FFF;
+	box-shadow: inset 0px 1px 3px 0px rgba(0,0,0,0.50);
+	border-radius:3px;
+	border:none;
+	font-family:"Trebuchet MS", Helvetica, sans-serif;
+	font-size:12px;
+	color:#BBBBBB;
+
+}
+form input[type="submit"] {
+	vertical-align:top;
+	width:50px;
+	height:20px;
+	background:#CDDBC0;
+	box-shadow: 0px 1px 2px 0px rgba(0,0,0,0.20), inset 0px 2px 0px 0px #FFF;
+	border:none;
+	border-radius:6px;
+	font-family:"TrebuchetMS", Helvetica, sans-serif;
+	/*font-weight:bold;*/
+	font-size:12px;
+	text-align:center;
+	color:#554741;
+	letter-spacing:0px;
+	text-shadow: 0px 1px 0px rgba(255,254,255,0.50);
+
+}
+
+
 .center {
 	display:block;
 	margin-left:auto;
@@ -28,18 +61,15 @@ body {
 
 }
 #top form {
-	width:100%;
-	display:block;
-	border:1px solid white;
-	
-}
-#top form {
-	margin:0;
+	margin:15px 35px 0 0;
 	display:block;
 	color: #FFFEF5;
 	font-size: 9px;
 	text-align:right;
-	border:1px solid white;
+	
+}
+#top form p {
+	margin:6px 0 0 0;
 }
 #main {
 	width:100%;
