--- a/css/redux_style.css
+++ b/css/redux_style.css
@@ -43,12 +43,46 @@ form input[type="submit"] {
 	text-shadow: 0px 1px 0px rgba(255,254,255,0.50);
 
 }
+form select {
+	display:block;
+	margin: 20px auto 0 auto;
+	padding-left:15px;
+	border:7px solid #FFFEF5;
+	border-radius:0;
+	-webkit-appearance:none;
+	-moz-appearance:none;
+	appearance:none;
+	text-indent:0.01px;
+	text-overflow:"";
+	width:170px;
+	height:75px;
+	background:#CDDBC0 url("../img/arrows.png") no-repeat 90% center;
+	font-family:"TrebuchetMS", Helvetica, sans-serif;
+	font-size:50px;
+	color:#544741;
+}
 
 
 .center {
 	display:block;
 	margin-left:auto;
 	margin-right:auto;
+}
+.controls_middle {
+	display:block;
+	width:fit-content;
+	margin-left:auto;
+	margin-right:auto;
+	
+}
+.prevbutton, .playbutton, .nextbutton {
+	display:inline-block;
+	margin-top:30px;
+	vertical-align:middle;
+}
+.playbutton {
+	margin-left:18px;
+	margin-right:18px;
 }
 
 #top {
@@ -93,7 +127,7 @@ form input[type="submit"] {
 
 }
 #controls {
-	margin-bottom:-20px;
+	margin-bottom:0px;
 	width:100%;
 	height:160px;
 	background-color:#544741;
@@ -101,9 +135,10 @@ form input[type="submit"] {
 }
 #controlsBottom {
 	width:85%;
-	height:75px;
+	height:50px;
 	background-color:#CDDBC0;
-	border-radius:5px;
+	border-bottom-left-radius:5px;
+	border-bottom-right-radius:5px;
 	
 }
 #bottom {
