Register links to db
Still need to fix a few things but working overall

--- a/css/redux_style.css
+++ b/css/redux_style.css
@@ -148,7 +148,7 @@ a, a:visited {
 #register input {
 	display:block;
 	margin-bottom:5px;
-	padding-left:10px;
+	padding:0 10px;
 	width:20%;
 	height:45px;
 	border:1px solid #544741;
