--- a/css/redux_style.css
+++ b/css/redux_style.css
@@ -61,6 +61,12 @@ a, a:visited {
 }
 
 /* Login Form */
+#showLogin {
+	display:auto;
+}
+#showUser {
+	display:none;
+}
 #top form {
 	margin:15px 35px 0 0;
 	display:block;
@@ -151,8 +157,7 @@ a, a:visited {
 	padding:0 10px;
 	width:20%;
 	height:45px;
-	border:1px solid #544741;
-	font-family: Helvetica, sans-serif;
+	/*border:1px solid #544741;*/
 	font-size:16px;
 	color:#544741;
 }
@@ -166,7 +171,6 @@ a, a:visited {
 	border-radius:2px;
 	letter-spacing:0px;
 	text-shadow: 0px 1px 0px rgba(255,254,255,0.50);
-	font-family:"TrebuchetMS", Helvetica, sans-serif;
 }
 
 #controls {
