--- a/css/redux_style.css
+++ b/css/redux_style.css
@@ -21,6 +21,13 @@ a, a:visited {
 	margin-left:auto;
 	margin-right:auto;
 }
+
+.center iframe {
+	padding-top: 20px;
+	display: block;
+	margin: auto;
+}
+
 .error {
 	position:fixed;
 	top:60px;
@@ -57,7 +64,7 @@ a, a:visited {
 	top:0px;
 	left:0px;
 	background-color:#544741;
-
+	z-index: 1;
 }
 
 /* Login Form */
