Updated DB and Added Playlist
- added column trackID2 to db and populated with api searches including
artist name. I don't think it did much better than the first time though
so we'll have to stay on the lookout for bad songs

- added the playlist underneath the player (feel free to change any css)

--- a/css/redux_style.css
+++ b/css/redux_style.css
@@ -213,3 +213,45 @@ a, a:visited {
 	background-color:#544741;
 
 }
+
+div.tableholder {
+	height: 600px;
+	overflow-y: scroll;
+	margin: auto;
+	
+}
+
+table {
+	margin: auto;
+	color: #544741;
+}
+
+table td {
+	max-width: 300px;
+	padding: 4px;
+}
+
+table tr:hover {
+	background-color: #ffffff;
+}
+
+td.ranking {
+	text-align: center;
+}
+
+div ::-webkit-scrollbar {
+	width: 12px;
+}
+
+div ::-webkit-scrollbar-track {
+	background-color: #FEDD6C;
+	border-radius: 10px;
+}
+
+div ::-webkit-scrollbar-thumb {
+	border-radius: 10px;
+	background-color: #544741;
+}
+
+
+
