--- a/css/redux_style.css
+++ b/css/redux_style.css
@@ -40,23 +40,6 @@ a, a:visited {
 	font-family:"TrebuchetMS", Helvetica, sans-serif;
 	font-size:14px;
 }
-.controls_middle {
-	display:block;
-	width:fit-content;
-	margin-left:auto;
-	margin-right:auto;
-	
-}
-.prevbutton, .playbutton, .nextbutton {
-	display:inline-block;
-	margin-top:30px;
-	vertical-align:middle;
-}
-.playbutton {
-	margin-left:18px;
-	margin-right:18px;
-}
-
 #top {
 	width:100%;
 	height:60px;
@@ -106,7 +89,7 @@ a, a:visited {
 	color:#BBBBBB;
 
 }
-#loginForm input[type="submit"], #logoutUser input[type="submit"], #admnp, #hbut, #emsend {
+#loginForm input[type="submit"], #logoutUser input[type="submit"], #admnp, #hbut, #emsend, #preferences, #loadPreferences {
 	vertical-align:top;
 	width:50px;
 	height:20px;
@@ -116,7 +99,6 @@ a, a:visited {
 	border:none;
 	border-radius:6px;
 	font-family:"TrebuchetMS", Helvetica, sans-serif;
-	/*font-weight:bold;*/
 	font-size:12px;
 	text-align:center;
 	color:#554741;
@@ -145,10 +127,49 @@ a, a:visited {
 	margin-bottom:-35px;
 	width:80%;
 	height:fit-content;
-	background-color:#FEDD6C;
+	background-color:#FEE388;
 	border:33px solid #544741;
-	border-radius:30px;
+	border-radius:15px;
 
+}
+#statement {
+	margin:75px 0;
+	display:block;
+	font-family:"Trebuchet MS", Helvetica, sans-serif;
+	color: #544741;
+	text-shadow: -1px 1px 1px #FFFEF5;
+}
+#statement span {
+	display:block;
+	text-align:center;
+}
+#state1 {
+	margin:0 0 10px 0;
+	font-size: 50px;	
+}
+#state2 {
+	margin:0;
+	font-size: 33px;
+}
+#state3 {
+	margin:30px 0 0 0;
+	font-size:36px;
+}
+#problem {
+	margin-left:18%;
+	margin-right:18%;
+	padding-top:120px;
+	padding-bottom:120px;
+	color: #FFFEF5;
+	font-size:20px;
+	line-height:28px;
+	
+}
+.prob1 {
+	color:#CDDBC0;
+	font-size:30px;
+	text-shadow: -2px 1px 0px #FFFEF5;
+	letter-spacing:2px;
 }
 #yearForm select {
 	display:block;
@@ -197,17 +218,49 @@ a, a:visited {
 #controls {
 	margin-bottom:0px;
 	width:100%;
-	height:160px;
+	height:fit-content;
 	background-color:#544741;
 	
 }
+.favbuttons {
+	width:fit-content;
+	margin-bottom:0;
+	padding:50px 0;
+}
+.favbuttons form {
+	display:inline-block;
+}
+#preferences, #loadPreferences  {
+	display:inline-block;
+	width:fit-content;
+	height:40px;
+	font-size:16px;
+}
 #controlsBottom {
 	width:85%;
-	height:50px;
+	height:75px;
 	background-color:#CDDBC0;
 	border-bottom-left-radius:5px;
 	border-bottom-right-radius:5px;
-	
+	margin-bottom:200px;
+}
+#solution {
+	width:50%;
+	margin-left:auto;
+	margin-right:auto;
+	padding-bottom:50px;
+	padding-top:50px;
+}
+#solution span {
+	display:block;
+	text-align:center;
+	color:#544741;
+}
+.sol1 {
+	margin-bottom:20px;
+	font-size:40px;
+	text-shadow: -1px 2px 0px #FFFEF5;
+	letter-spacing:2px;
 }
 #bottom {
 	width:100%;
@@ -259,6 +312,7 @@ div ::-webkit-scrollbar-thumb {
 }
 
 #tablecontent {
+	margin-top:20px;
 	padding-top: 20px;
 	clear: both;
 	background-color: #544741;
