--- a/css/redux_style.css
+++ b/css/redux_style.css
@@ -21,13 +21,6 @@ a, a:visited {
 	margin-left:auto;
 	margin-right:auto;
 }
-
-.center iframe {
-	padding-top: 20px;
-	display: block;
-	margin: auto;
-}
-
 .error {
 	position:fixed;
 	top:60px;
@@ -271,11 +264,20 @@ a, a:visited {
 	background-color:#544741;
 
 }
-
+iframe {
+	padding-top: 50px;
+	padding-bottom:50px;
+	display: inline-block;
+	margin-left:5%;
+}
 div.tableholder {
-	height: 600px;
+	height: 480px;
+	width:420px;
 	overflow-y: scroll;
-	margin: auto;
+	display:inline-block;
+	margin-left:20px;
+	margin-bottom:50px;
+	font-size:12px;
 	
 }
 
