--- a/css/redux_style.css
+++ b/css/redux_style.css
@@ -166,7 +166,7 @@ a, a:visited {
 }
 #yearForm select {
 	display:block;
-	margin: 20px auto 0 auto;
+	margin: 20px auto 25px auto;
 	padding-left:15px;
 	border:7px solid #FFFEF5;
 	border-radius:0;
@@ -265,7 +265,7 @@ a, a:visited {
 
 }
 iframe {
-	padding-top: 50px;
+	padding-top: 25px;
 	padding-bottom:50px;
 	display: inline-block;
 	margin-left:5%;
